# nh-xml-from

./: Cargo.toml  README.md  basic.xml  holywow.xml  nh_iter.sh
example/: basic.toml  holywow.toml
example/input/json/: dialogue.json
example/input/ron/: nomai_object.ron
example/input/toml/error/: invalid_type.toml
example/input/yaml/: dialogue.yaml
example/output/xml/: dialogue.xml
example/toml/: astro_object_entry.toml  dialogue.toml  nomai_object.toml
example/toml/error/: invalid_type_didnt_error.toml  invalid_type_nested.toml  no_default_entry_condition.toml
example/xml/: astro_object_entry.xml  dialogue.xml
examples/input/json/: astro_object_entry.json  nomai_object.json
examples/input/json/error/: invalid_type.json  no_default_entry.json
examples/input/ron/: astro_object_entry.ron  dialogue.ron
examples/input/ron/error/: invalid_type.ron  no_default_entry.ron
examples/input/toml/: dialogue.toml  nomai_object.toml
examples/input/yaml/: astro_object_entry.yml  nomai_object.yaml
examples/input/yaml/error/: invalid_type.yaml  no_default_entry.yaml
examples/output/json/: astro_object_entry.json  dialogue.json  nomai_object.json
examples/output/ron/: astro_object_entry.ron  dialogue.ron  nomai_object.ron
examples/output/toml/: astro_object_entry.toml  dialogue.toml  nomai_object.toml
examples/output/xml/: astro_object_entry.xml  nomai_object.xml
examples/output/yaml/: astro_object_entry.yaml  dialogue.yaml  nomai_object.yaml
src/: configs.rs  data.rs  files.rs  main.rs  util.rs
src/configs/: astro_object.rs  dialogue.rs  text_block.rs
