[package]
name = "nh-xml-from"
version = "1.2.0"
edition = "2021"
authors = ["Luci <lucidashygirl@proton.me>"]
description = "A tool that lets you convert various formats to XML for New Horizons"
readme = "README.md"
repository = "https://github.com/lucidashygirl/nh-xml-from"
license = "MIT"
license-file = "LICENSE"
keywords = ["modding", "outer-wilds", "new-horizons", "cli"]
categories = ["command-line-utilities", "filesystem", "config"]

[dependencies]
quick-xml = "0.36.2"
ron = "0.8.1"
serde_json = "1.0.132"
serde_yml = "0.0.12"

[dependencies.toml]
version = "0.8.19"
features = ["parse"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
