[package]
name = "nh-xml-from"
version = "1.3.0"
edition = "2021"
authors = ["Luci <lucidashygirl@proton.me>"]
description = "A tool that lets you convert various formats to XML for New Horizons"
readme = "README.md"
repository = "https://github.com/lucidashygirl/nh-xml-from"
license = "MIT"
keywords = ["modding", "outer-wilds", "new-horizons", "cli"]
categories = ["command-line-utilities", "filesystem", "config"]

[dependencies]
ron = "0.8.1"
serde_json = "1.0.132"
serde_yml = "0.0.12"

[dependencies.quick-xml]
version = "0.36.2"
features = ["serialize"]

[dependencies.toml]
version = "0.8.19"
features = ["parse"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[lints.clippy]
pedantic = {level = "warn", priority = -1}
cargo = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}
